Ngweti ngahindula ibishubahohe nisige i Kifuliiru naho.

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,6 @@
-# About
+# Guno mukolwa. 
 
-This is the about page! This page is shown on the navbar.
+Menya bingi ku twehe. Byoshi ibiloziri guno mukolwa.
+Tuliri Bafuliiru, tumusima indeto yitu Kifuliiru. Iliri ndeto ngale, ndeto nyija, ndeto imuganulwa na' bandu bingi. Ndeto nga zindi zooshi.
+
+Tugweti tugakola bweneene higulu tuzamuule indeto yitu Kifuliiru.
