--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,10 @@
-# Introduction
+# Ndondeezo
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+Muyegerere ku kino kibaja kitu.
 
-## What is Nextra?
+## Tusome i Kifuliiru biliri biki?
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+Guno mukolwa **Tusome i Kifuliiru**, guliri mukolwa muhamu bweneene na kandi mwija ugugatugwasa tumenye bingi ku **Kifuliiru** na mu **Kifuliiru.** 
+Tumusima indeto yitu nga ngisi kwo tumuyisima twehe twenene na ngisi kwo tuli musima imwitu Ibufuliiru.
 
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+## Menya bingi ku Bufuliiru, Bafuliiru ne Kifuliiru naho:  [https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru](https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru).
