--- a/pages/advanced.mdx
+++ b/pages/advanced.mdx
@@ -1,3 +1,6 @@
-# Advanced
+# Ibikola byo' lugero luhamu bweneene
 
-This is the index page for the Advanced folder!
+Soma ibindu bye'Kifuliiru ibikola ku lugero luhamuna bweneene. Ibindu ibikola hala bweneene.
+Tuyiji bingi mu Kifuliiru na mu zindi ndeto. Yibyo byoshi ngisi byo tuyiji mu zindi ndeto tubilete na mu ndeto yitu Kifuliitu.
+Tugakizi kiyiga no kuyigirizania bwija bwija. Tugamenya bingi.
+
