Nayongera i link ku Ayivugwe Kabemba

--- a/pages/Ibiyandike mu Kifuliiru/ibifuliiru.com.mdx
+++ b/pages/Ibiyandike mu Kifuliiru/ibifuliiru.com.mdx
@@ -5,4 +5,4 @@ Ibufuliiru.com guliri mukolwa akagwajika ikyanya akabona kwo kera abindu byakaya
 Kera akola imikolwa itali na minini. Na yibi ngisi byo'gweti ugasoma hano ku kino kinyerere no guno mukolwa gwoshima ye'kagugwajika ukushagira ku nzalira ukuhisa ku bino byoshi ubwini.
 Uno mwana witu anabe akasoma byo'buhinga buhyahya, anasima ukudeta kwo indetp yitu nayo iyungukire mu ngisi byoshi by'ayiji.
 
-Mwangasoma bingi kuyehe hano.
+Mwangasoma bingi kuyehe Ayivugwe Kabemba [hano]{https://ayivugwe.editorx.io/ayivugwekabemba}.
