Nayongera amagambo mingi mu index.mdx

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,4 +7,10 @@ Muyegerere ku kino kibaja kitu.
 Guno mukolwa **Tusome i Kifuliiru**, guliri mukolwa muhamu bweneene na kandi mwija ugugatugwasa tumenye bingi ku **Kifuliiru** na mu **Kifuliiru.** 
 Tumusima indeto yitu nga ngisi kwo tumuyisima twehe twenene na ngisi kwo tuli musima imwitu Ibufuliiru.
 
+Ukudeta kwo indeto yitu Kifuliiru ilonge imisi, mu njira yoshi ilya ngisi kwo yangaba, tukwanini twehe twe Bafuliiru,
+twe' bene' ndeto ukuzizika mu kumenya bwija indeto yitu.
+Ndaye gundi mundu ugayiji kola ngisi byo twehe tutazi kola. Bino binatumage tugasalira bweneene higulu lye' mikolwa kera iyakolwa mu Kifuliiru higulu lyo' kugendereza i Kifuliiru.
+
+Ikindu kihamu mu byoshi kuli kusoma no kusomesa abandi bandu ngisi byo tuyiji higulu lyo kubagwasa nabo bahikize ngisi ho tukolera mu Kifuliiru. Zezo nzaliro zo zitumiri guno mukolwa guliri hano. Higulu tusome indeto yitu Kifuliiru kwoshi kulya tushobwiri.
+
 ## Menya bingi ku Bufuliiru, Bafuliiru ne Kifuliiru naho:  [https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru](https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru).
