--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -13,4 +13,35 @@ Ndaye gundi mundu ugayiji kola ngisi byo twehe tutazi kola. Bino binatumage tuga
 
 Ikindu kihamu mu byoshi kuli kusoma no kusomesa abandi bandu ngisi byo tuyiji higulu lyo kubagwasa nabo bahikize ngisi ho tukolera mu Kifuliiru. Zezo nzaliro zo zitumiri guno mukolwa guliri hano. Higulu tusome indeto yitu Kifuliiru kwoshi kulya tushobwiri.
 
-## Menya bingi ku Bufuliiru, Bafuliiru ne Kifuliiru naho:  [https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru](https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru).
+### Biki tugasoma hano
+Hano tugasoma byoshi ibiloziri indeto yitu Kifuliiru. 
+- Amagambo, 
+- Ibufuliiru
+- Bafuliiru
+- Kifuliiru
+- ibiyandike mu Kifuliiru, 
+- na ngisi kindi kindu kyoshi ikiliri mu Kifuliiru
+
+Ubushambale bwitu kuliri kubona abandu bitu na ngisi gundi yeshi uwangasima ukumenya bikingi ku ndeto yitu, alonge ngisi munda abagasomera indeto yitu Kifuliiru na ngisi kindi kindu kyoshi kyo' twangasoma mu Kifuliiru.
+
+
+### Ba nyandi abagasomeesa hano
+
+Tutaziba ne'kiso kihamu. Tugakiziyigiriza ngisi byotuyiji na byotushobwiri. Tuliri balimu mu bindi bindu nga mu bindu byo buhinga buhyahya kiri na mu zindi ndeto, yibyo tuyiji na tushobwiri, tugabileta mu Kifuliiru.
+Ku kino kinyerere tutagweti abandu bingi abayitanziri ukudeta kwo bakole umukolwa uguli nga guno gwo kuyigiriza abandi bandu indeto yitu. Nga ngisi kwo tuyiji, bangaba baliri hohe haliko banabule ngisi kwo bagabikola higulu bino byoshi bukola buhinga buhyahya. Haliko tuyemeziri kwo bagahikirwa nabo, no' butabaazi bwabo bagweti ku ngisi Mufuliiru na yeyeshi ulya uwangasima ukusoma indeto yitu Kifuliiru agayunguke.
+
+
+### Biki ibitumiri mwehe mwe mwasima ukusomeesa i Kifuliiru?
+
+Twasima ukusomeesa mu Kifuliiru higulu lye'bitumiri bingi: 
+- Ukuluza ibiyandike mu Kifuliiru
+- Ukugendereza indeto yitu Kifuliiru
+- Ukuhikiza abandi bandu indeto yitu mu ndeto yitu
+- Ne' bindi bingi.
+
+### Mwehe muliri ba nyandi?
+
+Guno mukolwa guyimangirwi na' bana bitu Bafuliiru. Byo binatumiri tugweti tugakola ngisi kwo tuyiji na ngisi kwo tushobwiri.
+
+
+### Menya bingi ku Bufuliiru, Bafuliiru ne Kifuliiru naho:  [https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru](https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru).
