Nahindula ngisi kwo i lien yo mwisho mu index.md imuboneka

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -44,4 +44,4 @@ Twasima ukusomeesa mu Kifuliiru higulu lye'bitumiri bingi:
 Guno mukolwa guyimangirwi na' bana bitu Bafuliiru. Byo binatumiri tugweti tugakola ngisi kwo tuyiji na ngisi kwo tushobwiri.
 
 
-### Menya bingi ku Bufuliiru, Bafuliiru ne Kifuliiru naho:  [https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru](https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru).
+##### Menya bingi ku Bufuliiru, Bafuliiru ne Kifuliiru naho:  [https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru](https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru).
