Nayongera amagambo mu Kifuliiru iliri mw'idako lye Ibindi

--- a/pages/ibindi/kifuliiru.mdx
+++ b/pages/ibindi/kifuliiru.mdx
@@ -1,3 +1,10 @@
 # Kifuliiru
 
-Kifuliiru. 
+## Tumenye bingi ku ndeto yitu Kifuliiru. 
+
+Indeto iliri muberangirwa Kifuliiru, imuganulwa ku Kihugo kye' Congo. Ino ndeto inabe iliri ya' bandu abamuberangirwa **Bafuliiru**.
+Bano bandu batuziri mu Kihugo kye' **Congo** mu Territoire ye' Buvira (Uvira). 
+
+Kino kibaja kiliri hano tumenye bingi ku yeno ndeto yitu, Kifuliiru; ndeto nyija, ndeto ngale.
+
+Mwangamenya bingi ku Kifuliiru na mu Kifuliiru [hano](https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru)
