Nahindula itwe lya'magambo na nayongera amagambo mingi

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,15 @@
-# Ndondeezo
+# Muyegerere Tusome i Kifuliiru mu Kifuliiru
  
-Muyegerere ku kino kibaja kitu.
+## Ndondeezo
+
+Mu kihugo kya zene, abandu booshi bagweti bagakola kwoshi bashobwiri higulu lyo' kudeta kwo bazamuule indeto.
+Bino binaberage bishagini ne' bindu bya kwingi kera babona ku ndeto. 
+Mu bindu bihamu ibija ku ndeto ne'byangatuma indeot igasikama inamale na kyanya kingi halinde ikihire ibibusi ibigayija, haliri ukusome no kusomeesa iyo ndeto.
+Ukusomeesa kwoshi ngisi kwo kwangaba kuliri kusoma nakwo, nga ngisi kwo tumubwirwa na'bakoli komiri ukusomeesa. Higulu bimuhuna ubike ibiringi ngisi byo'gayiji yigiriza abandi.
+Yibyo binatume ugalooza looza mu kulooza ukahereza abagakukulikira ibindu ibiyeniri, bikabatabaale nabo. Na ku Kifuliiru biliri yukwo, umundu yeeshi ugadeta kwo alozizi ukusomeesa ino ndeto yitu, akwanini atemenya ngisi by'agayigiriza abandi, yibyo binatume naye agalooza bingi. 
+
+Abandu bingi batayiji kwo ikyanya indeto yayandikwa bimutuma igasikama, igakire ikise, ikalonga injira yo'kutinda. Ku balya ngisi kera abasobanukirwa yibyo bagweti bagakola higulu indeto zaabo zitateereke.
+Na nitu ku Kifuliiru tugweti tugakola ngisi kwo tushobwiri, higulu indeto yitu Kifuliiru itakengeri lenga nga mbusi.
 
 ## Tusome i Kifuliiru biliri biki?
 
