Nayongera ikizunguza kye' Congo hano

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,7 @@
 # Muyegerere, Tusome i Kifuliiru mu Kifuliiru
  
+[![](.github/DRCongo.png)]
+
 ## Ndondeezo
 
 Mu kihugo kya zene, abandu booshi bagweti bagakola kwoshi bashobwiri higulu lyo' kudeta kwo bazamuule indeto.
