Ndamali gira buligo ukulungika ino projet mu organizarion hano ku GitHub. Bindu bitamalifwa.

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -56,3 +56,5 @@ Guno mukolwa guyimangirwi na' bana bitu Bafuliiru. Byo binatumiri tugweti tugako
 
 
 ##### Menya bingi ku Bufuliiru, Bafuliiru ne Kifuliiru naho:  [https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru](https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru).
+
+Guno mukolwa gugendreriri. Mukizi zatirazatira hano mumenye bingi ku byotugweti tugakola.
