Nayongera i size ye image mu index

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
 # Muyegerere, Tusome i Kifuliiru mu Kifuliiru
  
-![](.github/DRCongo.png)
+<img src=".github/DRCongo.png" object-fit="contain">
 
 ## Ndondeezo
 
