--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
 # Muyegerere, Tusome i Kifuliiru mu Kifuliiru
  
-<img src=".github/DRCongo.png" object-fit="contain">
+![](.github/DRCongo.png)
 
 ## Ndondeezo
 
