--- a/pages/kifuliiru.mdx
+++ b/pages/kifuliiru.mdx
@@ -69,12 +69,12 @@ Kili kinovu kubabutirwa bayo na kubalya abatuziiri Ibufuliiru kili bangaba batal
 4. ...
 
 ## Hayi munda twangasomera ibiyandike mu Kifuliiru
-
-
+Ku zeene Umufuliiru kera akola ibindu bingi bweneene ibyangatubala ukudeta kwo tulonge ibindu byo'kusoma ibiliri mu Kifuliiru. Hano tugatondobola ngisi byo'tukoliyiji na banyandi abakabila.
+1. Tusome i Kifuliiru : ['']
 
 ## Tukole mu Kifuliiru
 
-Tukolere indeto yitu
+### Tukolere indeto yitu
 
 Ukukola kuliri kuhamu bwenene. Ukudeta kwo ahandu hagendere kandi li abandu bagenderere, babanini ukukola. 
 Nitu higulu lye'mwitu Ibufuliiru, higulu lya'abandu biitu Abafuliiru na higulu lye'ndeto yiitu Kifuliiru; 
