add links to read and listen to the Kifuliiru language

--- a/pages/kifuliiru.mdx
+++ b/pages/kifuliiru.mdx
@@ -70,7 +70,25 @@ Kili kinovu kubabutirwa bayo na kubalya abatuziiri Ibufuliiru kili bangaba batal
 
 ## Hayi munda twangasomera ibiyandike mu Kifuliiru
 Ku zeene Umufuliiru kera akola ibindu bingi bweneene ibyangatubala ukudeta kwo tulonge ibindu byo'kusoma ibiliri mu Kifuliiru. Hano tugatondobola ngisi byo'tukoliyiji na banyandi abakabila.
-1. Tusome i Kifuliiru : ['']
+
+1. [Tusome i Kifuliiru](https://kifuliiru.vercel.app): 
+2. [Kifuliiru](https://ibufuliiru.editorx.io/kifuliiru)
+3. [Ibufuliiru](https://ibufuliiru.editorx.io/ibufuliiru)
+4. [Imyazi mu Kifuliiru](https://ibufuliiru.editorx.io/imyazi)
+5. [Ayivugwe Kabemba](https://ayivugwe.editorx.io/ayivugwekabemba)
+6. [Radio Ibufuliiru](https://radioibufuliiru.substack.com/)
+
+
+## Hayi ho twangayvwiriza i Kifuliiru
+Umufuliiru kera akola bingi. Agweti agalenga mu njira ngisi zo abakolikoziri bingi bakagenda balengamwo. Loonga ibibaja bya kwingikwingi wangayivwiramwo indeto yitu Kifuliiru.
+
+1. [Radio Ibufuliiru ku Zeno.fm](https://zeno.fm/radio/radio-ibufuliiru/)
+2. [Radio Ibufuliiru ku namuyehuulo Ibufuliiru](https://ibufuliiru.editorx.io/ibufuliiru/radio-ibufuliiru)
+3. [Radio Ibufuliiru ku Spotify](https://open.spotify.com/show/4EKaz2HNNYiBhk7WjKZvF0)
+4. [Radio Ibufuliiru ku Spotify for podcasters](https://podcasters.spotify.com/pod/show/radio-ibufuliiru/)
+4. [Radio Ibufuliiru ku Amazon Music](https://music.amazon.com/podcasts/40ffd9df-41f7-421f-a56f-007be2f72c01/radio-ibufuliiru-podcast)
+5. [Radio Ibufuliiru ku Audible](https://www.audible.com/pd/Radio-Ibufuliiru-Podcast-Podcast/B09W5ZVSBM)
+
 
 ## Tukole mu Kifuliiru
 
