--- a/pages/kifuliiru.mdx
+++ b/pages/kifuliiru.mdx
@@ -1,8 +1,8 @@
 # Kifuliiru
 
-## Loonga amagambo mingi ku Kifuliiru: ndeto yitu, ndeto ya'Bafuliiru
+## Menya bingi ku Kifuliiru, ndeto ya'Bafuliiru, ndeto ye'Bufuliiru, ndeto ngale, ndeto nyija
 
-Kifuliiru, iliri ndeto imuganulwa na twehe bandu be Bufuliiru. Tutuziri mu Territoire ye' Buvira(Uvira), 
+Kifuliiru, iliri ndeto imuganulwa na twehe bandu be' Bufuliiru. Tutuziri mu Territoire ye' Buvira(Uvira), 
 mu Province ye' Sud-Kivu mu Kihugo kye Congo(RDC).
 
 Kifuliiru.  Ndeto yitu, ndeto ngale. Iliri ndeto imuganulwa na twehe Bafuliiru. Fuliiru. 
