nayongera ikindi kihande higulu lyo kusoma i kifuliiru

--- a/pages/kifuliiru.mdx
+++ b/pages/kifuliiru.mdx
@@ -97,3 +97,6 @@ Nitu higulu lye'mwitu Ibufuliiru, higulu lya'abandu biitu Abafuliiru na higulu l
 tubanini ukukola bwenene no kubika imisi yiitu yooshi. 
 Ibija byooshi twangahikira bitagashaga mu kubwatala naho kandi li mu miganulo ya kwokwokwo, 
 haliko tubanini tukole.
+
+## Menya biingi ku Kifuliiru, mu Kifuliiru
+Tugweti tugakola ukudeta kwo indeto yitu ihike hala.
