add imigani ye Kifuliiru content to the page

--- a/pages/Imigani.mdx
+++ b/pages/Imigani.mdx
@@ -1,3 +1,145 @@
 # Imigani ye' Kifuliiru
 
 Loonga imigani ye'Kifuliiru na'Bafuliiru mu Kifuliiru
+
+
+|Umugani|Kwo gudesiri                 |
+|-------|-----------------------------|
+|Abaami babiri batabalamirana.|                             |
+|Abaami babiri batashigwa.|                             |
+|Abaana ikumi ne'ngembe ikumi.|                             |
+|Ababiri yo nio mbamu.|                             |
+|Ababishangiiri bo bakizi bihambanwa.|                             |
+|Ábagayona ge 'bulambo bakizi lagaana.|                             |
+|Abahuuni babiri bataloozania.|                             |
+|Abakazi bo bakayubaka bo banakahongola.|                             |
+|Abakundiini bakizi yibwika uluhu lwe'nguku.|                             |
+|Abandu iri bali bingi batashulika mbeba.|                             |
+|Abandu magirane.|                             |
+|Abatalagaana batagenderanwa.|                             |
+|Abatwa iri baluga batadaha injuki.|                             |
+|Abenge babiri batayokya budiku.|                             |
+|Ágagagaaka mbu gakiri mutobo.|                             |
+|Áhabukwa halaalwa iro.|                             |
+|Áhalenga isinge, no'muhungo ho.|                             |
+|Áhali ngulwe, hatakulwa.|                             |
+|Akaasi uvigiiri katamera ha kwawe.|                             |
+|Akaaya ákali mwe'shoosho, katabula mulozi.|                             |
+|Akabwa akali ha mwabo katabula kumoka.|                             |
+|Akabwa kali mu mama, iri kaganatungulwa.|                             |
+|Akabwa kashaagirwa nako.|                             |
+|Akabwa katabutira kwi'vuha.|                             |
+|Akabwa katayitira ku ngoma.|                             |
+|Ákahiiva bushigi, kafulusa mwi'zuuba.|                             |
+|Ákahiiva ingwi kayigalula.|                             |
+|Akandende katayahukira.|                             |
+|Akanwa kayiji lya si katayiji deta.|                             |
+|Akanyuni kaniini ko kali mu menyi yibisha.|                             |
+|Akasa kayoza mwana.|                             |
+|Ákatondere katafwa ku bulembo.|                             |
+|Ákayiji nyambwe ko kamúhiiva.|                             |
+|Akizi yengeha, anabuli yishiirwa.|                             |
+|Amalyogo gakizi buta amaniogomba.|                             |
+|Amasu go winyu gatakubonera nyoko-vyala.|                             |
+|Amata, iri gadetwa-detwa ganahinduke mate.|                             |
+|Amavi ge'fuka gataniiha.|                             |
+|Amavi maniera ho, gataboneka|                             |
+|Amavi muumu gatabaya.|                             |
+|Amiiji ágali hala gatahika na mbeho.|                             |
+|Amiiru go'mwana gatatuma yishe I rubaagiro.|                             |
+|Bihinga wa mushana, birya wa kajungo.|                             |
+|Biki ngaalya, atahaana.|                             |
+|Inyoota itamalira ha lwiji, iri ndogano.|                             |
+|Iri habula úwi'twe itabaagwa.|                             |
+|Iri kagalama kataliibwa na kaabo.|                             |
+|Ishamamba yo'mugiikulu inagana si itatwika.|                             |
+|Ishombana itasiga akaaya.|                             |
+|Isiga liguma litahiisa nyungu.|                             |
+|Isiku mbindu.|                             |
+|Ítahiiti amahembe ikizi tibitira áhali nyina.|                             |
+|İye'nyuma yo ikizi haaga ingoni.|                             |
+|İyimwirwi, itabeta.|                             |
+|Kagayirizo atahama itwe. Kamama kanatungulwe.|                             |
+|Kashaaga ho kagatenda, kanagende ho kagalunguluka.|                             |
+|Katayishiigirwa.|                             |
+|Kere úyihandula ku baabo akizi gendi gumba.|                             |
+|Kere úziga i rugundu ye luhereka.|                             |
+|Kikulu nvwi atali kikulu ihano.|                             |
+|Kilongomera akalongomera ubuhanya.|                             |
+|Kundu amiiji gangaduuta gatangayibagira imwabo mbeho.|                             |
+|Kwo wangiziri atakirwa.|                             |
+|Kyo'mundu ali mu manika abwatiiri, akizi kimanula bwimanga.|                             |
+|Lange-lange akalanga ikitali.|                             |
+|Lukumbira mwami si lutakumbira umuganda.|                             |
+|Maama nie, atali nga maama twe.|                             |
+|Mba mbaane atagira buhaane.|                             |
+|Mba nguhe, bwo bwira úbulama.|                             |
+|Mba wa miiru iri ahiiti yo agabaaga.|                             |
+|Mbeereza ndole akateera umulinga gwa mwami.|                             |
+|Mberekeza butali bwoba.|                             |
+|Mbwika-mbwika, kutabuka ishushira.|                             |
+|Muka membo atahyanwa.|                             |
+|Mukozi wa ndanda, mukolerwa wa malega.|                             |
+|Munda ye'mbene mutahuma babiri.|                             |
+|Mwami ahundwa na'bandu.|                             |
+|Mwami atabiika nzigo.|                             |
+|Mwami atatyozibwa.|                             |
+|Mwami ye shigwa.|                             |
+|Mwene ihyage ye lweje.|                             |
+|Nabiriyeyo akalya ingoko yo'muzimu.|                             |
+|Nabwigobolera atuula ku njira.|                             |
+|Nabwikangaate atasooka bulambo.|                             |
+|Nabwilaalika atahembwa.|                             |
+|Nabwilaalika atahembwa.|                             |
+|Nagaage ye guuvwa.|                             |
+|Nalibwini ye bega uwabo.|                             |
+|Nalutule iri ali ku nalubere, akizi tamba anasheke.|                             |
+|Nalwage ataluta.|                             |
+|Birindirwa, si bitashwirwa.|                             |
+|Bishekerwa atali nga Bilirirwa.|                             |
+|Bubege kwo, atali nga busingule.|                             |
+|Ga mukaanie atadumbwa.|                             |
+|Gutadeta mukulu nga úwágubwini.|                             |
+|Gutafuba, iri muniini.|                             |
+|Gutalulira mu kanwa ko'winyu.|                             |
+|Hamwa Malyogo hatalaalwa, si hamwa Mujenga hanalaalwe.|                             |
+|Hamwa umulangi halirwa kimbombo.|                             |
+|Hamwabo-vyala umundu halindirwa kinwa, si hatalindirwa kyusi.|                             |
+|He'ngaavu ishonga amahembe, ho ikizi tulira injira.|                             |
+|He'ngima ishonga umunwe, ho inakizi lenga.|                             |
+|He'ngwi itali, nyambwe yo itwa ho'lubaaja.|                             |
+|Hi'bunda likomera umukazi, ho analibutira.|                             |
+|Ho utagasiga umwana, unahasige umugani.|                             |
+|Ho wangatuula no'mubeeshi, unatuule no'mulozi.|                             |
+|Ho'mundu atali, mbu gahabiikwa.|                             |
+|Honyo-honyo, ye kizi zihonyola imitondo.|                             |
+|I bwami yo ituula ingulube.|                             |
+|I mushubo itagalukirwa.|                             |
+|İbigahya bikizi birira.|                             |
+|Ibindu bitagerwa lukogo.|                             |
+|Ibindu byombo.|                             |
+|Ibiti ibiri haguma byo bisyekana.|                             |
+|İbiyufira ubwira, kuli kugulu.|                             |
+|Ibunda litagira mwira.|                             |
+|Ibuye keera iryaboneka, litangaki yita ifuka.|                             |
+|Ifuka itahinga, itabula ingishi.|                             |
+|Ifuuvi igakira itagira mwandandwe.|                             |
+|Ifuuvi itasara ibilunge.|                             |
+|Ifuuvi ndaazi, ikahanga igindi ukulerwa.|                             |
+|Igania itakunga.|                             |
+|Ihiniini higerwa ibuye.|                             |
+|Ihinyuni hiniini hyo hiluza amashala.|                             |
+|Ihinzogoro hitanywera mu mahumba.|                             |
+|Ihumba, iri inaniiri.|                             |
+|Ikihugo kizira mwami, iri kifwiri ĺkihuuzibwa kitalama.|                             |
+|Ikijumbu kigonde kitagondoolwa.|                             |
+|Ikikoba kiyikululira amakala.|                             |
+|Ikikozi iri kyangalya ihaazi, kinahinduke nyunda.|                             |
+|Ikinwa kihuluka ne'mbali.|                             |
+|Ikisuure gutali musonga.|                             |
+|Ikisuure kya boto kitabuza ingaavu ukushoola.|                             |
+|Ikiti kigololwa kikiri kito.|                             |
+|Ikiti kihundwa na'matavi.|                             |
+|Ikiti kinunu kikizi twibwa kwe'ngoma kabiri.|                             |
+|Ikiti kiri matavi kitagwa bwija.|                             |
+|Ikitugo kitangasumba itwe.|                             |
