--- a/pages/Imigani.mdx
+++ b/pages/Imigani.mdx
@@ -1,6 +1,6 @@
 # Imigani ye' Kifuliiru
 
-Loonga imigani ye'Kifuliiru na'Bafuliiru mu Kifuliiru
+## Loonga imigani ye'Kifuliiru na'Bafuliiru mu Kifuliiru
 
 
 |Umugani|Kwo gudesiri                 |
