--- a/pages/Imigeeza.mdx
+++ b/pages/Imigeeza.mdx
@@ -1,3 +1,7 @@
 # Imigeeza ye' Kifuliiru
 
-Loonga imigeeza ye'Kifuliiru na'Bafuliiru mu Kifuliiru
+Imigeza bili biki?
+
+Menya bingi ku migeeza y'Abafuliiru mu Kifuliiru na ngisi kwo idesiri.
+
+## Loonga imigeeza ye'Kifuliiru na'Bafuliiru mu Kifuliiru
