--- a/pages/Invumo.mdx
+++ b/pages/Invumo.mdx
@@ -1,3 +1,5 @@
 # Invumo ze' Kifuliiru
 
-Loonga invumo ze'Kifuliiru na'Bafuliiru mu Kifuliiru
+Invumo bili biki?
+
+##Loonga invumo ze'Kifuliiru na'Bafuliiru mu Kifuliiru
