add og image tag

--- a/pages/Invumo.mdx
+++ b/pages/Invumo.mdx
@@ -2,4 +2,6 @@
 
 Invumo bili biki?
 
+Menya bingi ku nvumo mu Kifuliiru na ngisi kwo zidesiri.
+
 ##Loonga invumo ze'Kifuliiru na'Bafuliiru mu Kifuliiru
