--- a/pages/tusome/ndondeero.mdx
+++ b/pages/tusome/ndondeero.mdx
@@ -14,9 +14,9 @@ Indeto yitu Kifuliiru iliri ndeto nga zindi ndeto zooshi, haliko haliri ibindu b
 
 - **Ukuharura**: Mu bindu ibiyijikini ukuba binovu bweneene mu zindi ndeto, kuliri kuharura. Haliko ikyanya tukayiegereza twanasalira bweneene higulu lyo'kuharura mu Kifuliiru, twanayijigwana kwo ukuharura mu Kifuliiru kuliri kakayu bweneene ng'ibuye.
 
-_Kibuuzo_: Ku benge biki ukuharura kuliri kukayu mu Kifuliiru?
-
-_Ishuvyo_: Higulu ukuharura nga ukushaga ku higuma ukuhisa ku ikumi biliri bnovu ikyanya utakulikiza ingambo lyo lyoshi lirya. Haliko ikyanya kera wakulikiza igambo, kwo kudeta ikindu kandi li ibindu igweti ugaharura, ukuharura ukushaga ku higuma ukuhisa ku bulinda kumuyami hinduka lwoshi lwoshi, binahune tumenye bwija biki tugakoleesa.
+_**Kibuuzo**_: Ku benge biki ukuharura kuliri kukayu mu Kifuliiru?
+_**Ishuvyo**_: Higulu ukuharura nga ukushaga ku higuma ukuhisa ku ikumi biliri bnovu ikyanya utakulikiza ingambo lyo lyoshi lirya.
+Haliko ikyanya kera wakulikiza igambo, kwo kudeta ikindu kandi li ibindu igweti ugaharura, ukuharura ukushaga ku higuma ukuhisa ku bulinda kumuyami hinduka lwoshi lwoshi, binahune tumenye bwija biki tugakoleesa.
 
 - **Ubuniini na Ubwingi bw'amagambo**: Indeto zooshi zigweti ngisi kwo zigizirwi na ngisi kwo amagambo gazo gagizirwi. Ubuniini kuliri kudeta ku kyanya wadeta ikindu kiguma naho. Ubwingi ku kyanya ibindu bikoli lenziri ikiguma.
   Mu Kifuliiru ubuniini no'bwingi bw'amagambo iliri njira italiri novu ukuhulukana higulu tukwaniini ukutegwajika no'kumenya amagam,bo ge'Kifuliiru. Hano hanabagage kera hayija ugundi mukolwa, ukukumanya amagambo ge'Kifuliiru.
