--- a/pages/tusome/ndondeero.mdx
+++ b/pages/tusome/ndondeero.mdx
@@ -1,6 +1,6 @@
 # Tusome i Kifuliiru
 
-## Ndoondero higulu lyo'kusoma i Kifuliiru
+## Ndondeero higulu lyo'kusoma i Kifuliiru
 
 Guno mukolwa gwitu guliri hano higulu tuloziizi tusome, tusomeese indeto yitu Kifuliiru. Tuliri Bafuliiru, amalega gitu mahamu kuliri kudeta kwo indeto yitu ihike hala, ihikire abandu bingi, ne'ngingwe twehe twe'Bafuliiru tube tuyiji kwo ino ndeto yitu itagayamimala mu baandu.
 
@@ -14,8 +14,8 @@ Indeto yitu Kifuliiru iliri ndeto nga zindi ndeto zooshi, haliko haliri ibindu b
 
 - **Ukuharura**: Mu bindu ibiyijikini ukuba binovu bweneene mu zindi ndeto, kuliri kuharura. Haliko ikyanya tukayiegereza twanasalira bweneene higulu lyo'kuharura mu Kifuliiru, twanayijigwana kwo ukuharura mu Kifuliiru kuliri kakayu bweneene ng'ibuye.
 
-_**Kibuuzo**_: Ku benge biki ukuharura kuliri kukayu mu Kifuliiru?
-_**Ishuvyo**_: Higulu ukuharura nga ukushaga ku higuma ukuhisa ku ikumi biliri bnovu ikyanya utakulikiza ingambo lyo lyoshi lirya.
+    _**Kibuuzo**_: Ku benge biki ukuharura kuliri kukayu mu Kifuliiru?
+    _**Ishuvyo**_: Higulu ukuharura nga ukushaga ku higuma ukuhisa ku ikumi biliri bnovu ikyanya utakulikiza ingambo lyo lyoshi lirya.
 Haliko ikyanya kera wakulikiza igambo, kwo kudeta ikindu kandi li ibindu igweti ugaharura, ukuharura ukushaga ku higuma ukuhisa ku bulinda kumuyami hinduka lwoshi lwoshi, binahune tumenye bwija biki tugakoleesa.
 
 - **Ubuniini na Ubwingi bw'amagambo**: Indeto zooshi zigweti ngisi kwo zigizirwi na ngisi kwo amagambo gazo gagizirwi. Ubuniini kuliri kudeta ku kyanya wadeta ikindu kiguma naho. Ubwingi ku kyanya ibindu bikoli lenziri ikiguma.
