Change index page content

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,60 +1,63 @@
 # Muyegerere, Tusome i Kifuliiru mu Kifuliiru
- 
+
 ![](.github/DRCongo.png)
 
 ## Ndondeezo
 
-Mu kihugo kya zene, abandu booshi bagweti bagakola kwoshi bashobwiri higulu lyo' kudeta kwo bazamuule indeto.
-Bino binaberage bishagini ne' bindu bya kwingi kera babona ku ndeto. 
-Mu bindu bihamu ibija ku ndeto ne'byangatuma indeot igasikama inamale na kyanya kingi halinde ikihire ibibusi ibigayija, haliri ukusome no kusomeesa iyo ndeto.
-Ukusomeesa kwoshi ngisi kwo kwangaba kuliri kusoma nakwo, nga ngisi kwo tumubwirwa na'bakoli komiri ukusomeesa. Higulu bimuhuna ubike ibiringi ngisi byo'gayiji yigiriza abandi.
-Yibyo binatume ugalooza looza mu kulooza ukahereza abagakukulikira ibindu ibiyeniri, bikabatabaale nabo. Na ku Kifuliiru biliri yukwo, umundu yeeshi ugadeta kwo alozizi ukusomeesa ino ndeto yitu, akwanini atemenya ngisi by'agayigiriza abandi, yibyo binatume naye agalooza bingi. 
+Mu kihugo kya zene, abandu booshi bagweti bagakola kwoshi bashobwiri higulu lyo' kudeta kwo bazamuule indeto zabo.
+Mu bindu bihamu ibija ku ndeto ne'byangatuma indeto igasikama inamale ne' kyanya kingi halinde ihikire ibibusi ibigayija, haliri ukusome no kusomeesa iyo ndeto.
+Ukusomeesa kwoshi ngisi kwo kwangaba kuliri kusoma nakwo, nga ngisi kwo tumubwirwa na'bakoli komiri ukusomeesa.
+Umuundu ugasomesa i Kifuliiru, akwaniini atebera ayiji bingi mu ino ndeto.
 
-Abandu bingi batayiji kwo ikyanya indeto yayandikwa bimutuma igasikama, igakire ikise, ikalonga injira yo'kutinda. Ku balya ngisi kera abasobanukirwa yibyo bagweti bagakola higulu indeto zaabo zitateereke.
+Abandu bingi batayiji kwo ikyanya indeto yayandikwa bimutuma igasikama, inagire ikise, inalonge injira yo'kulama. Ku balya ngisi kera abasobanukirwa yibyo bagweti bagakola higulu indeto zaabo zitatereeke.
 Na nitu ku Kifuliiru tugweti tugakola ngisi kwo tushobwiri, higulu indeto yitu Kifuliiru itakengeri lenga nga mbusi.
 
 ## Tusome i Kifuliiru biliri biki?
 
-Guno mukolwa **Tusome i Kifuliiru**, guliri mukolwa muhamu bweneene na kandi mwija ugugatugwasa tumenye bingi ku **Kifuliiru** na mu **Kifuliiru.** 
-Tumusima indeto yitu nga ngisi kwo tumuyisima twehe twenene na ngisi kwo tuli musima imwitu Ibufuliiru.
+Guno mukolwa **Tusome i Kifuliiru**, guliri mukolwa muhamu bweneene na kandi mwija ugugatugwasa tumenye bingi ku **Kifuliiru** na mu **Kifuliiru.**
+Tumusima indeto yitu nga ngisi kwo tumuyisima twehe tweneene na ngisi kwo tuli musima imwitu Ibufuliiru.
 
-Ukudeta kwo indeto yitu Kifuliiru ilonge imisi, mu njira yoshi ilya ngisi kwo yangaba, tukwanini twehe twe Bafuliiru,
-twe' bene' ndeto ukuzizika mu kumenya bwija indeto yitu.
+Ukudeta kwo indeto yitu Kifuliiru ilonge imisi, mu njira yoshi ilya ngisi kwo yangaba, tukwanini twehe twe Bafuliiru, twe bene ino ndeto tuzizike mu kumenya bwija indeto yitu.
 Ndaye gundi mundu ugayiji kola ngisi byo twehe tutazi kola. Bino binatumage tugasalira bweneene higulu lye' mikolwa kera iyakolwa mu Kifuliiru higulu lyo' kugendereza i Kifuliiru.
 
 Ikindu kihamu mu byoshi kuli kusoma no kusomesa abandi bandu ngisi byo tuyiji higulu lyo kubagwasa nabo bahikize ngisi ho tukolera mu Kifuliiru. Zezo nzaliro zo zitumiri guno mukolwa guliri hano. Higulu tusome indeto yitu Kifuliiru kwoshi kulya tushobwiri.
 
-### Biki tugasoma hano
-Hano tugasoma byoshi ibiloziri indeto yitu Kifuliiru. 
+## Biki tugasoma hano
 
-- Amagambo, 
+Hano tugasoma byoshi ibiloziri indeto yitu Kifuliiru.
+
+- Amagambo
+- Ukuharura
 - Ibufuliiru
 - Bafuliiru
 - Kifuliiru
-- ibiyandike mu Kifuliiru, 
-- na ngisi kindi kindu kyoshi ikiliri mu Kifuliiru
+- Ibiyandike mu Kifuliiru,
+- Na ngisi kindi kindu kyoshi ikiliri mu Kifuliiru
 
 Ubushambale bwitu kuliri kubona abandu bitu na ngisi gundi yeshi uwangasima ukumenya bikingi ku ndeto yitu, alonge ngisi munda abagasomera indeto yitu Kifuliiru na ngisi kindi kindu kyoshi kyo' twangasoma mu Kifuliiru.
 
-### Ba nyandi abagasomeesa hano
+## Ba nyandi abagasomeesa hano
 
 Tutaziba ne'kiso kihamu. Tugakiziyigiriza ngisi byotuyiji na byotushobwiri. Tuliri balimu mu bindi bindu nga mu bindu byo buhinga buhyahya kiri na mu zindi ndeto, yibyo tuyiji na tushobwiri, tugabileta mu Kifuliiru.
 Ku kino kinyerere tutagweti abandu bingi abayitanziri ukudeta kwo bakole umukolwa uguli nga guno gwo kuyigiriza abandi bandu indeto yitu. Nga ngisi kwo tuyiji, bangaba baliri hohe haliko banabule ngisi kwo bagabikola higulu bino byoshi bukola buhinga buhyahya. Haliko tuyemeziri kwo bagahikirwa nabo, no' butabaazi bwabo bagweti ku ngisi Mufuliiru na yeyeshi ulya uwangasima ukusoma indeto yitu Kifuliiru agayunguke.
 
-### Biki ibitumiri mwehe mwe mwasima ukusomeesa i Kifuliiru ?
+## Biki ibitumiri mwehe mwe mwasima ukusomeesa i Kifuliiru?
 
-Twasima ukusomeesa mu Kifuliiru higulu lye'bitumiri bingi: 
+Twasima ukusomeesa mu Kifuliiru higulu lye'bitumiri bingi:
 
 - Ukuluza ibiyandike mu Kifuliiru
 - Ukugendereza indeto yitu Kifuliiru
 - Ukuhikiza abandi bandu indeto yitu mu ndeto yitu
 - Ne' bindi bingi.
 
-### Mwehe muliri ba nyandi?
+## Mwehe muliri ba nyandi?
 
 Guno mukolwa guyimangirwi na' bana bitu Bafuliiru. Byo binatumiri tugweti tugakola ngisi kwo tuyiji na ngisi kwo tushobwiri.
 
-
-##### Menya bingi ku Bufuliiru, Bafuliiru ne Kifuliiru naho:  [https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru](https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru).
+##### Menya bingi ku Bufuliiru, Bafuliiru ne Kifuliiru naho: [https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru](https://ibufuliiru.editorx.io/ibufuliiru/kifuliiru).
 
 Guno mukolwa gugendreriri. Mukizi zatirazatira hano mumenye bingi ku byotugweti tugakola.
+
+## Njira nyikagi tugakizisoma mwohe
+
+Mu nzaliro tugweti na ngisi byo kera twashungika, tugabika kino kibaaja kibere kya bindu biyandike. Bino binayiji tabaala mu zilya nzaliro zo'kudeta kwo ibiyandike biluge mu Kifuliiru. Ingingwe, ibitayazi yandikwa mu Kifuliiru, byo'tuloziiz ukusomesa, kumbe ikyanya tugaba twabiyandika, bigabaho.
