Change pnpm version

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -58,6 +58,6 @@ Guno mukolwa guyimangirwi na' bana bitu Bafuliiru. Byo binatumiri tugweti tugako
 
 Guno mukolwa gugendreriri. Mukizi zatirazatira hano mumenye bingi ku byotugweti tugakola.
 
-## Njira nyikagi tugakizisoma mwohe
+## Njira nyikagi tugakizisoma mwohe?
 
 Mu nzaliro tugweti na ngisi byo kera twashungika, tugabika kino kibaaja kibere kya bindu biyandike. Bino binayiji tabaala mu zilya nzaliro zo'kudeta kwo ibiyandike biluge mu Kifuliiru. Ingingwe, ibitayazi yandikwa mu Kifuliiru, byo'tuloziiz ukusomesa, kumbe ikyanya tugaba twabiyandika, bigabaho.
