Add counting from 20 to 99

--- a/pages/tusome/ukuharura/ikumi-ku-igana.mdx
+++ b/pages/tusome/ukuharura/ikumi-ku-igana.mdx
@@ -1,33 +1,16 @@
 # Harura kushagira ku Ikumi kuhisa ku igana
 
-Mu Kifuliiru uku
+Ukuharura mu Kifuliiru ukushagira ku ikumi ukuhisa ku ijana kandi li igana, bitaliri bikayu bweneene higulu kumuba kuyubakira ku ngisi byo kera twabona hano mu [zero ku ikumi](./zerokumi). Kwo kudeta tugayabira ikumi tunayongere kwohe ngisi ho tukolihikiziizi.
 
-## Ikumi na ...
+11 = Ikumi + na + higuma.
 
-Ikumi na...,
+## Kuti tugaharura?
 
-#### Amakumi
+Hano tugagenda tugaharura ikumi ikumi, halide tuhise ku igana.
 
-Makumi ... na ...
+### Ikumi ukihisa ku ikumi na mweenda(10-19)
 
-#### Ijana kandi li igana
-
-Igana na ...
-
-#### Amajana kandi li amagana
-
-Magana ... na ...
-
-#### Ikihumbi
-
-Kihumbi ... na ...
-
-#### Ibihumbi
-
-Bihumbi ... na ...
-
-### Ibilenziri ikumi na mw'idako la'amakumi gabiri
-
+10 = Ikumi  
 11 = Ikumi na higuma  
 12 = Ikumi na bubiri  
 13 = Ikumi na bushatu  
@@ -38,7 +21,7 @@ Bihumbi ... na ...
 18 = Ikumi na munaana  
 19 = Ikumi na mweenda
 
-### Harura Amakumi gabiri ukuhisa mw'idako ly'amakumi gashatu
+### Amakumi gabiri ukuhisa ku makumi gabiri na mweenda(20-29)
 
 20 = Makumi gabiri  
 21 = Makumi gabiri na higuma  
@@ -51,6 +34,99 @@ Bihumbi ... na ...
 28 = Makumi gabiri na munaana  
 29 = Makumi gabiri na mweenda
 
-## 2. Ukuharura ibindu
+### Amakumi gashatu ukuhisa ku makumi gashatu nba mwenda(30-39)
 
-## 3. Ukuharura ibindu n'abandu
+30 = Makumi gashatu
+31 = Makumi gashatu na higuma
+32 = Makumi gashatu na bubiri  
+33 = Makumi gashatu na bushatu
+34 = Makumi gashatu na buna  
+35 = Makumi gashatu na butanu  
+36 = Makumi gashatu na ndatu  
+37 = Makumi gashatu na bulinda  
+38 = Makumi gashatu na munaana
+39 = Makumi gashatu na mweenda
+
+### Amakumi gana ukuhisa ku makuni gana na mweenda(40-49)
+
+40 = Makumi gana  
+41 = Makumi gana na higuma  
+42 = Makumi gana na bubiri  
+43 = Makumi gana na bushatu  
+44 = Makumi gana na buna  
+45 = Makumi gana na butanu  
+46 = Makumi gana na ndatu  
+47 = Makumi gana na bulinda  
+48 = Makumi gana na munaana  
+49 = Makumi gana na mweenda
+
+### Amakumi gatanu ukuhisa ku makuni gatanu na mweenda (50-59)
+
+50 = Makumi gatanu  
+51 = Makumi gatanu na higuma  
+52 = Makumi gatanu na bubiri  
+53 = Makumi gatanu na bushatu  
+54 = Makumi gatanu na buna  
+55 = Makumi gatanu na butanu  
+56 = Makumi gatanu na ndatu  
+57 = Makumi gatanu na bulinda  
+58 = Makumi gatanu na munaana  
+59 = Makumi gatanu na mweenda
+
+### Amakumi galindatu ukuhisa ku makuni galindatu na mweenda (60-69)
+
+60 = Makumi galindatu  
+61 = Makumi galindatu na higuma  
+62 = Makumi galindatu na bubiri  
+63 = Makumi galindatu na bushatu  
+64 = Makumi galindatu na buna  
+65 = Makumi galindatu na butanu  
+66 = Makumi galindatu na ndatu  
+67 = Makumi galindatu na bulinda  
+68 = Makumi galindatu na munaana  
+69 = Makumi galindatu na mweenda
+
+### Amakumi galinda ukuhisa ku makuni galinda na mweenda (70-79)
+
+70 = Makumi galinda  
+71 = Makumi galinda na higuma  
+72 = Makumi galinda na bubiri  
+73 = Makumi galinda na bushatu  
+74 = Makumi galinda na buna  
+75 = Makumi galinda na butanu  
+76 = Makumi galinda na ndatu  
+77 = Makumi galinda na bulinda  
+78 = Makumi galinda na munaana  
+79 = Makumi galinda na mweenda
+
+### Amakumi galimunaana ukuhisa ku makuni galimunaana na mweenda (80-89)
+
+80 = Makumi galimunaana  
+81 = Makumi galimunaana na higuma  
+82 = Makumi galimunaana na bubiri  
+83 = Makumi galimunaana na bushatu  
+84 = Makumi galimunaana na buna  
+85 = Makumi galimunaana na butanu  
+86 = Makumi galimunaana na ndatu  
+87 = Makumi galimunaana na bulinda  
+88 = Makumi galimunaana na munaana  
+89 = Makumi galimunaana na mweenda
+
+### Amakumi galimweenda ukuhisa ku makuni galimweenda na mweenda (60-69)
+
+90 = Makumi galimweenda  
+91 = Makumi galimweenda na higuma  
+92 = Makumi galimweenda na bubiri  
+93 = Makumi galimweenda na bushatu  
+94 = Makumi galimweenda na buna  
+95 = Makumi galimweenda na butanu  
+96 = Makumi galimweenda na ndatu  
+97 = Makumi galimweenda na bulinda  
+98 = Makumi galimweenda na munaana  
+99 = Makumi galimweenda na mweenda
+
+### Ijana kandi li igana (100)
+
+Ikyanya kera twaharura ukushaga ku zero kandi li ubusha ukuhisa ku makumi galimweenda na mweenda, tunahikirage ijana kandi li igana(100).
+
+Ukuharuraga ukushaga ku igana ukuzamuuka, genda hano [Igana ku Kuhumbi](./igana-ku-kihumbi).
