Add counting from 100 to 1000

--- a/pages/tusome/ukuharura/ikumi-ku-igana.mdx
+++ b/pages/tusome/ukuharura/ikumi-ku-igana.mdx
@@ -1,6 +1,6 @@
 # Harura kushagira ku Ikumi kuhisa ku igana
 
-Ukuharura mu Kifuliiru ukushagira ku ikumi ukuhisa ku ijana kandi li igana, bitaliri bikayu bweneene higulu kumuba kuyubakira ku ngisi byo kera twabona hano mu [zero ku ikumi](./zerokumi). Kwo kudeta tugayabira ikumi tunayongere kwohe ngisi ho tukolihikiziizi.
+Ukuharura mu Kifuliiru ukushagira ku ikumi ukuhisa ku ijana kandi li igana, bitaliri bikayu bweneene higulu kumuba kuyubakira ku ngisi byo kera twabona hano mu [zero ku ikumi](./zero-ku-ikumi). Kwo kudeta tugayabira ikumi tunayongere kwohe ngisi ho tukolihikiziizi.
 
 11 = Ikumi + na + higuma.
 
@@ -8,7 +8,7 @@ Ukuharura mu Kifuliiru ukushagira ku ikumi ukuhisa ku ijana kandi li igana, bita
 
 Hano tugagenda tugaharura ikumi ikumi, halide tuhise ku igana.
 
-### Ikumi ukihisa ku ikumi na mweenda(10-19)
+### Ikumi ukihisa ku ikumi na mweenda (10-19)
 
 10 = Ikumi  
 11 = Ikumi na higuma  
@@ -21,7 +21,7 @@ Hano tugagenda tugaharura ikumi ikumi, halide tuhise ku igana.
 18 = Ikumi na munaana  
 19 = Ikumi na mweenda
 
-### Amakumi gabiri ukuhisa ku makumi gabiri na mweenda(20-29)
+### Amakumi gabiri ukuhisa ku makumi gabiri na mweenda (20-29)
 
 20 = Makumi gabiri  
 21 = Makumi gabiri na higuma  
@@ -34,7 +34,7 @@ Hano tugagenda tugaharura ikumi ikumi, halide tuhise ku igana.
 28 = Makumi gabiri na munaana  
 29 = Makumi gabiri na mweenda
 
-### Amakumi gashatu ukuhisa ku makumi gashatu nba mwenda(30-39)
+### Amakumi gashatu ukuhisa ku makumi gashatu nba mwenda (30-39)
 
 30 = Makumi gashatu
 31 = Makumi gashatu na higuma
@@ -47,7 +47,7 @@ Hano tugagenda tugaharura ikumi ikumi, halide tuhise ku igana.
 38 = Makumi gashatu na munaana
 39 = Makumi gashatu na mweenda
 
-### Amakumi gana ukuhisa ku makuni gana na mweenda(40-49)
+### Amakumi gana ukuhisa ku makuni gana na mweenda (40-49)
 
 40 = Makumi gana  
 41 = Makumi gana na higuma  
