Reorganize content and add new pages

--- a/pages/tusome/ukuharura/igana-ku-kihumbi.mdx
+++ b/pages/tusome/ukuharura/igana-ku-kihumbi.mdx
@@ -10,8 +10,8 @@ Injira kandi li formule, yeno hano:
 
 ### Igana ku magana gabiri
 
-==Ijana + na+..==
+**Ijana + na+..**
 
 ### Amagana gabiri
 
-===Magana gabiri + na+...
+**Magana gabiri + na+...**
