--- a/pages/tusome/ukuharura/ndondeero.mdx
+++ b/pages/tusome/ukuharura/ndondeero.mdx
@@ -8,3 +8,9 @@ Mu Kifuliiru, ukuharura kuliri kugabure mu njira izihisiri ku zishatu. Haliri uk
 
 Ukuharura ngana kuliri kuharura kushgira ku busha kandi li zero, ukugenderera. Ukuharura mu Kifuliiru kuliri gugabure mu kubiri. Ukushagira ku busha kandi li zero ukuhisa uk'wikumi, no kushagira ku ikumi ukugenderera.
 Ikindu kihamu kuliri kutemenya ukuharura ukushagira ku higuma ukuhisa kw'ikumi. Ibindi bimugenda bigakulikira. Na mu bihande byo'kuharura tugagenda tugabona, tugabona kwo ikindu kihama ikikayu kuliri kutemenya ngisi kwo ugaharura ngana kandi li ibindu ukushagira mu yikyo kihande kya mbere. Ibindi kumuba kukola kushwekera kuguma byebyo.
+
+### Ngisi kwo tugakola
+
+Tugakizi harura mu njira zibiri: Umuharura na ngisi kwo muyandikwa mu Kifuliiru.
+
+Gwajika hano ku [Zero ku Ikumi](./zero-ku-ikumi).
