--- a/pages/tusome/ukuharura/zero-ku-ikumi.mdx
+++ b/pages/tusome/ukuharura/zero-ku-ikumi.mdx
@@ -1,5 +1,9 @@
 ### Zero ukuhisa ku ikumi
 
+Ikyanya ukoliyiji ukuharura ukushaga ku busha kandi li zero ukuhisa ku ukumi, yaho kera wamenya bingi higulu ibisigiri bikola binovu bweneene.
+
+Li wangaba ugweti 11, kuliri kudeta kwo ugweti ikumi ne' higuma ibutambi. Kwo kudeta ugweti ikumi ugweti ne' higuma. Ukugenderera ukuhisa ku ikumi na mweenda kuliri kwookwo.
+
 Kwokuno:
 
 0 = Ubusha/zero  
@@ -14,8 +18,4 @@ Kwokuno:
 9 = Mweenda  
 10 = Ikumi
 
-Ikyanya ukoliyiji ukuharura ukushaga ku busha kandi li zero ukuhisa ku ukumi, yaho kera wamenya bingi higulu ibisigiri bikola binovu bweneene.
-
-Li wangaba ugweti 11, kuliri kudeta kwo ugweti ikumi ne' higuma ibutambi. Kwo kudeta ugweti ikumi ugweti ne' higuma. Ukugenderera ukuhisa ku ikumi na mweenda kuliri kwookwo.
-
-Kwo kudeta byooshi ibikoli lenziri ikumi, kumuba naho kudeta
+Tukolaga tugakulikiza ukushagaga ku [ikumi ukuhisa ku igana](./ikumi-ku-igana).
