Continue reorg content and links

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,3 +11,9 @@ Umuundu ugasomesa i Kifuliiru, akwaniini atebera ayiji bingi mu ino ndeto.
 
 Abandu bingi batayiji kwo ikyanya indeto yayandikwa bimutuma igasikama, inagire ikise, inalonge injira yo'kulama. Ku balya ngisi kera abasobanukirwa yibyo bagweti bagakola higulu indeto zaabo zitatereeke.
 Na nitu ku Kifuliiru tugweti tugakola ngisi kwo tushobwiri, higulu indeto yitu Kifuliiru itakengeri lenga nga mbusi.
+
+## Hayi tugasomera?
+
+Ukudeta kwo utole ngisi byo ugasoma, lenga yaho higulu mu menu, utole i menu Tusome kandi li ulenge uhume hano tugakutwala ku [Ndozeero yo'kusoma](tusome/ndondeero_tusome).
+
+Kongwa. Tuyegerere tweeshi.
