Add new numbers from 100 to 1000

--- a/pages/tusome/ukuharura/igana-ku-kihumbi.mdx
+++ b/pages/tusome/ukuharura/igana-ku-kihumbi.mdx
@@ -15,3 +15,5 @@ Injira kandi li formule, yeno hano:
 ### Amagana gabiri
 
 **Magana gabiri + na+...**
+
+Higulu lyo'kubona kwo ukuharura ukushagira kw'igana ukuhisa ku kihumbi bigaluga bweneene, twasima tugabure ngisi muharuro mu kibaaja kyagwo: [Igana](./igana), [Amagana gabiri](./magana-gabiri), [Amagana gashatu](./magana-gashatu), [Amagana gana](./magana-gana), [Amagana gatanu](./magana-gatanu), [Amagana galindatu](./magana-galindatu), [Amagana galinda](./magana-galinda), [Amagana galimunaana](./magana-galimunaana), [Amagana galimweenda](./magana-galimweenda), [ikihumbi](./hihumbi).
