Add all the numbers from 100 to 999 with details

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -14,6 +14,6 @@ Na nitu ku Kifuliiru tugweti tugakola ngisi kwo tushobwiri, higulu indeto yitu K
 
 ## Hayi tugasomera?
 
-Ukudeta kwo utole ngisi byo ugasoma, lenga yaho higulu mu menu, utole i menu Tusome kandi li ulenge uhume hano tugakutwala ku [Ndozeero yo'kusoma](tusome/ndondeero_tusome).
+Ukudeta kwo utole ngisi byo ugasoma, lenga yaho higulu mu menu, utole i menu Tusome kandi li ulenge uhume hano tugakutwala ku [Ndondeero yo'kusoma](tusome/ndondeero_tusome).
 
 Kongwa. Tuyegerere tweeshi.
