--- a/pages/tusome/ukuharura/zero-ku-ikumi.mdx
+++ b/pages/tusome/ukuharura/zero-ku-ikumi.mdx
@@ -1,4 +1,4 @@
-### Zero ukuhisa ku ikumi
+### Zero kandi li ubusha kandi li namuteneka ukuhisa ku ikumi
 
 Ikyanya ukoliyiji ukuharura ukushaga ku busha kandi li zero ukuhisa ku ukumi, yaho kera wamenya bingi higulu ibisigiri bikola binovu bweneene.
 
@@ -6,7 +6,7 @@ Li wangaba ugweti 11, kuliri kudeta kwo ugweti ikumi ne' higuma ibutambi. Kwo ku
 
 Kwokuno:
 
-0 = Ubusha/zero  
+0 = Ubusha/zero/Namuteneka  
 1 = Higuma  
 2 = Bubiri  
 3 = Bushatu  
