--- a/pages/twehe/umwandisi.mdx
+++ b/pages/twehe/umwandisi.mdx
@@ -1,2 +1,3 @@
 #Umwandisi wa guno mukolwa
-Mwene witu wa Ayivugwe Kabemba Mukome
+
+Ku nino kinyerere guno mukolwa guyimangirwi na mwenewitu wa wa [Ayivugwe Kabemba Mukome](https://ayivugwekabemba.me).
