--- a/pages/tusome/ukuharura/magana-galimweenda.mdx
+++ b/pages/tusome/ukuharura/magana-galimweenda.mdx
@@ -110,4 +110,4 @@
 998 = Magana galimweenda na makumi galimweenda na munaana  
 999 = Magana galimweenda na makumi galimweenda na mweenda
 
-Ukuharura kushagira ku [Magana galimweenda hano](./magana-galimweenda).
+Ukuharura kushagira ku [Ikihumbi hano](./kihumbi).
